# zed-cql

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  extension.toml  snippets.json
docs/: README.md
grammars/: cql.wasm
languages/cql/: config.toml  highlights.scm  outline.scm  runnables.scm  tasks.json
src/: cql_lsp.rs  cqlls.rs
