[package]
name = "zed_cql_lsp"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/cql_lsp.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
zed_extension_api = "0.3.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

