[package]
name = "zed_cql_lsp"
version = "0.0.1"
edition = "2024"

[lib]
path = "src/cql_lsp.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
zed_extension_api = "0.6.0"

# opt-lvl "s" size: 158275
# opt-lvl 3   size: 173915
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
